<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <MultiAutoCompleteTextView
        android:id="@+id/newUser"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#11000000"
        android:completionThreshold="0"
        android:ems="10"
        android:hint="Enter usernames to add"
        android:inputType="text"
        android:textColor="#000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/transactionTitle"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="text"
        android:textColor="#000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newUser"
        app:layout_constraintVertical_bias="0.021" />

    <EditText
        android:id="@+id/transactionAmount"
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#11000000"
        android:ems="10"
        android:hint="@string/amount"
        android:inputType="numberDecimal"
        android:textColor="#000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transactionTitle" />

    <EditText
        android:id="@+id/transactionDesc"
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#11000000"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:textColor="#000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transactionAmount" />

    <Button
        android:id="@+id/addTransButton"
        android:layout_width="385dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/btn_rounded"
        android:text="Add Transaction"
        android:textAllCaps="false"
        android:textColor="#004a8e"
        android:textSize="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.408" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="540dp"
        android:layout_height="88dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transactionDesc">

        <TextView
            android:id="@+id/paidByText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Paid by "
            android:textSize="30sp" />

        <Button
            android:id="@+id/paidByButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="You"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/splitText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" and split "
            android:textSize="30sp" />

        <Button
            android:id="@+id/splitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="EQUALLY"
            android:textSize="30sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>