...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.408" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="500dp"
        android:layout_height="76dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="8dp"
...
